--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 __pycache__/lists.cpython-39.pyc
 cogs/__pycache__/admin.cpython-39.pyc
 cogs/__pycache__/fun.cpython-39.pyc
+.env
+.vscode/launch.json
