--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ cogs/__pycache__/admin.cpython-39.pyc
 cogs/__pycache__/fun.cpython-39.pyc
 .env
 .vscode/launch.json
+cogs/__pycache__/starboard.cpython-39.pyc
