--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ cogs/__pycache__/fun.cpython-39.pyc
 .vscode/launch.json
 cogs/__pycache__/starboard.cpython-39.pyc
 main.sqlite
+*.sqlite
+main.sqlite
