--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+main.sqlite
 __pycache__/lists.cpython-39.pyc
 cogs/__pycache__/admin.cpython-39.pyc
 cogs/__pycache__/fun.cpython-39.pyc
@@ -5,6 +6,5 @@ cogs/__pycache__/fun.cpython-39.pyc
 .vscode/launch.json
 cogs/__pycache__/starboard.cpython-39.pyc
 main.sqlite
-
 main.sqlite
 main.sqlite
