added servers command

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ cogs/__pycache__/fun.cpython-39.pyc
 cogs/__pycache__/starboard.cpython-39.pyc
 main.sqlite
 
+cogs/__pycache__/social_credit.cpython-39.pyc
